--- a/_i18n/de.yml
+++ b/_i18n/de.yml
@@ -61,7 +61,7 @@ pages:
             Wir wollen die Jugendlichen wertschätzen und ihnen Verantwortung übergeben, indem sie zu Botschaftern der positiven Werte des Sports werden, neue Talente in sich entdecken und sich als zukünftige Leader entwickeln können. Die Olympischen Jugendspiele werden zum Innovationslabor und zum Brutkasten neuer Ideen für die Jugend, indem auf das Erbe und die einzigartigen Stärken der Schweiz in den Bereichen Bildung, Kultur und Innovation zurückgegriffen wird.
 
             <span class="important-dates">Lausanne 2020 findet vom 10. bis 22. Januar 2020 statt.</span>
-    sports_title: Die Sportarten
+    sports_title: Die Sportdisziplinen
     sports_texte: "Das sportliche Programm der dritten Olympischen Jugend-Winterspiele ähnelt dem der Olympischen Winterspiele, beinhaltet aber Variationen und Innovationen in den von den Internationalen Verbänden angebotenen Disziplinen. Die Sportarten, die auf dem Programm stehen, sind:"
     sports:
       biathlon:
@@ -109,6 +109,7 @@ pages:
       snowboard:
         text: Snowboard
         link: "https://www.olympic.org/snowboard"
+    sports_new: Zum ersten Mal in der Geschichte der Olympischen Spiele wird Ski Mountaineering (Skitourenrennen) Teil des Olympischen Programms sein.
     sports_fin: Entdecke <b><a href="venues" class="link_site">hier</a></b> die Wettkampfstätten
     facts:
       title: Lausanne 2020 in Zahlen
