--- a/_i18n/de.yml
+++ b/_i18n/de.yml
@@ -19,9 +19,9 @@ pages:
       plus: weiterlesen
       autres: Mehr News
     about:
-      title: Über
+      title: Über uns
       texte: Die Olympischen Jugendspiele sind ein internationaler Olympischer Spitzensportanlass für Athleten im Alter von 15 bis 18 Jahren. Sie verbinden die sportliche Höchstleistung, die Kultur, sowie die Bildung in einem wahrhaften Sportfestival.
-      more: Mehr infos
+      more: Mehr dazu
     shop:
       title: Alle Lausanne 2020 Fan-Artikel demnächst verfügbar!
       button: Los geht’s
