--- a/_i18n/de.yml
+++ b/_i18n/de.yml
@@ -44,7 +44,7 @@ pages:
             Vielen Dank für dein Interesse an den Olympischen Jugendspielen Lausanne 2020.
             Unser Organisationskomitee hat momentan keine offenen Stellen zu besetzen.
     from: Ab
-    readFile: Mehr infos
+    readFile: Mehr Infos
   about:
     title1: "Die Olympischen Jugendspiele : Wetteifern, lernen und teilen!"
     texte1: |
