--- a/_i18n/de.yml
+++ b/_i18n/de.yml
@@ -53,7 +53,7 @@ pages:
             Sie verbinden sportliche Höchstleistungen mit Kultur und Bildung zu einem einzigartigen Sportfest und haben zum Ziel, die Jugend zu ermutigen, die positiven Werte des Sports anzunehmen und zu leben. Dies sind der Respekt gegenüber anderen, sich selbst und unserer Umwelt, die Freundschaft zwischen Völkern und Kulturen und sportliche Höchstleistung. Weiter sollen die Jugendlichen Sportbotschafter in der ganzen Welt werden.
             
             Die Olympischen Jugendspiele wollen ein führendes Beispiel der Innovation für die Sportanlässe der Zukunft zu sein. 
-    more: Mehr Infos !
+    more: Mehr dazu
     title2: Die Ambition von Lausanne 2020
     texte2: |
             Lausanne 2020 ist die Ambition, eine neue Sportplattform für die Jugend zu schaffen, die diese aktiv in die Vorbereitung und Organisation des Events miteinbezieht.
