--- a/_i18n/fr.yml
+++ b/_i18n/fr.yml
@@ -53,7 +53,7 @@ pages:
             Ils associent la performance sportive, la culture et l'éducation dans un réel festival du sport. Ils ont comme objectif d’encourager la jeunesse à adopter et vivre selon les valeurs positives du sport – le respect de l’autre, de soi, de notre environnement, l’amitié entre les peuples et les cultures, l’excellence dans le don de soi – et à en devenir les ambassadeurs à travers le monde.
             
             Par leur vocation, les Jeux Olympiques de la Jeunesse veulent être un incubateur d’innovation pour les événements sportifs du futur.
-    more: En apprendre plus !
+    more: En apprendre plus
     title2: L'ambition de Lausanne 2020
     texte2: |
             Lausanne 2020, c’est l’ambition de créer un plateforme sportive nouvelle pour la jeunesse en l’impliquant activement dans la préparation et l’organisation de l’événement.
