--- a/_i18n/en.yml
+++ b/_i18n/en.yml
@@ -53,7 +53,7 @@ pages:
             They combine sport performance, culture and education in an authentic celebration of sport with a festive atmosphere. The aim is to encourage youth to adopt and represent the positive values of sport - respect for others, for themselves and for our environment, friendship between people and cultures, excellence in self-giving, and to become sport ambassadors throughout the world.
             
             Through its mission, the Youth Olympic Games aspire to be a leading example of innovation for sporting events of the future.
-    more: Learn more !
+    more: Learn more
     title2: The ambition of Lausanne 2020
     texte2: |
             Lausanne 2020 is the ambition of creating a new sports platform for youth by actively involving them in the event’s preparation and organization.
