--- a/_i18n/de.yml
+++ b/_i18n/de.yml
@@ -19,9 +19,9 @@ pages:
       plus: weiterlesen
       autres: Mehr News
     about:
-      title: Über uns
-      texte: Die Olympischen Jugendspiele sind ein internationaler Olympischer Spitzensportanlass für Athleten im Alter von 15 bis 18 Jahren. Sie verbinden die sportliche Höchstleistung, die Kultur, sowie die Bildung in einem wahrhaften Sportfestival.
-      more: Mehr dazu
+      title: Über
+      texte: Vom 10. bis 22. Januar 2020 trägt Lausanne die 3. Auflage der Olympischen Jugend-Winterspiele aus. 28 Jahre nach der Vergabe des Titels «Olympische Hauptstadt» wird Lausanne zur Olympischen Stadt, in dem sie das zweitgrösste Winter Multisportevent nach den Olympischen Winterspielen organisiert und somit den jungen Athleten eine einzigarte und unvergessliche olympische Erfahrung bietet. Die Kultur, die Höchstleistungen und die Bildung finden zusammen und bilden ein wahrhaftes Sportfestival!
+      more: Mehr infos
     shop:
       title: Alle Lausanne 2020 Fan-Artikel demnächst verfügbar!
       button: Los geht’s
