--- a/_data/nav-header/fr.yml
+++ b/_data/nav-header/fr.yml
@@ -2,7 +2,9 @@
   path: "/fr/"
 - title: "News"
   path: "/fr/news"
-- title: "Les sites"
+- title: "Sites"
   path: "/fr/venues"
+- title: "Sports"
+  path: "/fr/sports"  
 - title: "A propos"
   path: "/fr/about"
