--- a/_data/nav-header/de.yml
+++ b/_data/nav-header/de.yml
@@ -4,5 +4,7 @@
   path: "/de/news"
 - title: "Wettkampfstätten"
   path: "/de/venues"
+- title: "Sportarten"
+  path: "/de/sports"
 - title: "Über uns"
   path: "/de/about"
