--- a/_data/nav-footer/fr.yml
+++ b/_data/nav-footer/fr.yml
@@ -2,8 +2,10 @@
   path: "/fr/"
 - title: "News"
   path: "/fr/news"
-- title: "Les sites"
+- title: "Sites"
   path: "/fr/venues"
+- title: "Sports"
+  path: "/fr/sports"
 - title: "A propos"
   path: "/fr/about"
 - title: "Emplois"
