--- a/_data/nav-footer/en.yml
+++ b/_data/nav-footer/en.yml
@@ -4,6 +4,8 @@
   path: "/news"
 - title: "Venues"
   path: "/venues"
+- title: "Sports"
+  path: "/sports"
 - title: "About"
   path: "/about"
 - title: "Jobs"
