--- a/_i18n/fr.yml
+++ b/_i18n/fr.yml
@@ -132,11 +132,9 @@ pages:
     heritage:
       title1: L'héritage Lausanne 2020
       txt1: |
-            Les Jeux Olympiques de la Jeunesse sont un véritable catalyseur de projet et représentent une grande chance d’investir de manière durable et intelligente dans le sport, la formation, la culture et les infrastructures. 
-            Ils laisseront un héritage positif pour la ville de Lausanne, le canton de Vaud et le sport en Suisse.
+            Les Jeux Olympiques de la Jeunesse sont un véritable catalyseur de projet et représentent une grande chance d’investir de manière durable et intelligente dans le sport, la formation, la culture et les infrastructures. Ils laisseront un héritage positif pour la ville de Lausanne, le canton de Vaud et le sport en Suisse.
       txt2: |
-            L’un des héritages phares du projet Lausanne 2020 est notamment l’accélération de la construction de la résidence d’étudiants VORTEX qui deviendra le Village Olympique le temps des Jeux. 
-            Ce bâtiment accueillera 1'200 étudiants universitaires et hôtes académiques et répondra à un besoin exprimé depuis de nombreuses années.
+            L’un des héritages phares du projet Lausanne 2020 est notamment l’accélération de la construction de la résidence d’étudiants VORTEX qui deviendra le Village Olympique le temps des Jeux. Ce bâtiment accueillera 1'200 étudiants universitaires et hôtes académiques et répondra à un besoin exprimé depuis de nombreuses années.
       title2: Héritage sportif
       txt3: |
             Une autre construction qui verra le jour pour les Jeux Olympiques de la Jeunesse est le nouvel Espace Malley, qui abritera plusieurs installations sportives, dont une patinoire (capacité de 9 700 places), et sera à disposition des jeunes athlètes. Ce projet remédie au manque cruel d’infrastructures sportives en Suisse romande.
