--- a/_i18n/fr.yml
+++ b/_i18n/fr.yml
@@ -139,15 +139,15 @@ pages:
       txt3: |
             Une autre construction qui verra le jour pour les Jeux Olympiques de la Jeunesse est le nouvel Espace Malley, qui abritera plusieurs installations sportives, dont une patinoire (capacité de 9 700 places), et sera à disposition des jeunes athlètes. Ce projet remédie au manque cruel d’infrastructures sportives en Suisse romande.
       txt4: |
-            "Outre ces deux constructions majeures, Lausanne 2020 permet notamment le développement des projets suivants :            
-            -	la mise en place de centres de formation pour la relève sportive en Suisse romande ;   
-            -	un accord avec le département du Jura français pour l’utilisation des infrastructures sportives gratuitement pendant 20 ans ;
-            
-            -	un soutien à la création d’un nouveau sport dans la région : le Short Track ;
-            
-            -	un apprentissage local spécifique à la gestion du sport et à l’organisation d’événements sportif d’envergure ;
-            
-            -	la promotion d’une nouvelle génération de managers de sport."
+            En puisant dans l’héritage et les atouts de la Suisse, vivre les valeurs du mouvement Olympique que sont l’amitié, l’excellence et le respect au travers de la formation, la culture, l’innovation et le sport en organisant des Jeux Olympiques de la Jeunesse, uniques et rassembleurs, au service de la promotion d’un monde meilleur.
+            Dans cet esprit, Lausanne 2020 s’est donné pour mission de :
+            - <b>Délivrer</b> des Jeux Olympiques de la Jeunesse novateurs en les co-construisant avec le CIO.
+            - <b>Créer</b> l’opportunité pour l’ensemble des parties prenantes de <b>s’approprier</b> les Jeux Olympiques de la Jeunesse en leur permettant de <b>s’engager activement</b> pour la réalisation de leurs propres objectifs.
+            - <b>Valoriser</b> les aspects culturels et éducatifs du sport en donnant une visibilité forte à toutes les facettes du concept des Jeux Olympique de la Jeunesse.
+            - <b>Fédérer et faire participer</b> toute la région, l’ensemble du pays ainsi que la France voisine autour d’un événement rassembleur et diffuseur d’énergie positive.
+            - <b>Promouvoir</b> la paix entre les peuples en créant un environnement propice au « vivre ensemble ».
+
+            <span class="important-dates">Lausanne 2020 se déroulera du 10 au 19 janvier 2020 !</span>
       txt5: "D’autre part, des projets concrets de promotion de sports d’hiver pour tous sont également en cours."
       title3: Héritage éducatif
       txt6: |
