--- a/_i18n/fr.yml
+++ b/_i18n/fr.yml
@@ -140,12 +140,12 @@ pages:
             Une autre construction qui verra le jour pour les Jeux Olympiques de la Jeunesse est le nouvel Espace Malley, qui abritera plusieurs installations sportives, dont une patinoire (capacité de 9 700 places), et sera à disposition des jeunes athlètes. Ce projet remédie au manque cruel d’infrastructures sportives en Suisse romande.
       txt4: |
             Outre ces deux constructions majeures, Lausanne 2020 permet notamment le développement des projets suivants : 
-      list1: "-	la mise en place de centres de formation pour la relève sportive en Suisse romande ;"
-      list2: "-	un accord avec le département du Jura français pour l’utilisation des infrastructures sportives gratuitement pendant 20 ans ;"
-      list3: "-	un soutien à la création d’un nouveau sport dans la région : le Short Track ;"
-      list4: "-	un apprentissage local spécifique à la gestion du sport et à l’organisation d’événements sportif d’envergure ;"
-      list5: "-	la promotion d’une nouvelle génération de managers de sport."
-      txt5: "D’autre part, des projets concrets de promotion de sports d’hiver pour tous sont également en cours."
+      list1: ' -	la mise en place de centres de formation pour la relève sportive en Suisse romande ;'
+      list2: ' -	un accord avec le département du Jura français pour l’utilisation des infrastructures sportives gratuitement pendant 20 ans ;"
+      list3: ' -	un soutien à la création d’un nouveau sport dans la région : le Short Track ;'
+      list4: ' -	un apprentissage local spécifique à la gestion du sport et à l’organisation d’événements sportif d’envergure ;'
+      list5: ' -	la promotion d’une nouvelle génération de managers de sport.'
+      list6: ' D’autre part, des projets concrets de promotion de sports d’hiver pour tous sont également en cours.'
       title3: Héritage éducatif
       txt6: |
             L’héritage éducatif de Lausanne 2020 va se traduire avec le fort partenariat engagé avec l’Université de Lausanne (UNIL), l’Ecole Polytechnique Fédérale (EPFL) et l’Ecole Hôtelière de Lausanne (EHL) par l’identification et la valorisation de compétences déjà existantes et la création de nouvelles au sein de la jeunesse locale.
