--- a/_i18n/fr.yml
+++ b/_i18n/fr.yml
@@ -141,7 +141,7 @@ pages:
       txt4: |
             Outre ces deux constructions majeures, Lausanne 2020 permet notamment le développement des projets suivants : 
       list1: ' -	la mise en place de centres de formation pour la relève sportive en Suisse romande ;'
-      list2: ' -	un accord avec le département du Jura français pour l’utilisation des infrastructures sportives gratuitement pendant 20 ans ;"
+      list2: ' -	un accord avec le département du Jura français pour l’utilisation des infrastructures sportives gratuitement pendant 20 ans ;'
       list3: ' -	un soutien à la création d’un nouveau sport dans la région : le Short Track ;'
       list4: ' -	un apprentissage local spécifique à la gestion du sport et à l’organisation d’événements sportif d’envergure ;'
       list5: ' -	la promotion d’une nouvelle génération de managers de sport.'
