--- a/_i18n/de.yml
+++ b/_i18n/de.yml
@@ -14,6 +14,8 @@ pages:
     title4:
       part1: Lausanne 2020
       part2: Wir sehen uns im Januar 2020
+    title_video: Olympic Day 2017
+    text_video: Mehr Infos
     news:
       title: News
       plus: weiterlesen
