--- a/_i18n/en.yml
+++ b/_i18n/en.yml
@@ -14,6 +14,8 @@ pages:
     title4:
       part1: Lausanne 2020
       part2: See you in January 2020
+    title_video: Olympic Day 2017
+    text_video: More
     news:
       title: News
       plus: read more
