--- a/_i18n/fr.yml
+++ b/_i18n/fr.yml
@@ -140,6 +140,9 @@ pages:
       title2: Héritage sportif
       txt3: |
             Une autre construction qui verra le jour pour les Jeux Olympiques de la Jeunesse est le nouvel Espace Malley, qui abritera plusieurs installations sportives, dont une patinoire (capacité de 9 700 places), et sera à disposition des jeunes athlètes. Ce projet remédie au manque cruel d’infrastructures sportives en Suisse romande.
+      webcam1: |
+               Vous pouvez visionner l'avancée des travaux de l'Espace Malley en direct, ou revoir l'intégralité des travaux jusqu'à ce jour en accéléré, en allant voir les webcams du chantier. Pour cela, 
+      webcam1link: cliquez ici.
       txt4: |
             Outre ces deux constructions majeures, Lausanne 2020 permet notamment le développement des projets suivants : 
       list1: ' -	la mise en place de centres de formation pour la relève sportive en Suisse romande ;'
