--- a/_i18n/fr.yml
+++ b/_i18n/fr.yml
@@ -14,7 +14,7 @@ pages:
     title4:
       part1: Lausanne 2020
       part2: Rendez-vous en Janvier 2020
-    title_video: Olympic Day 2017
+    title_video: Journée Olympique 2017
     text_video: En savoir plus
     news:
       title: News
