--- a/_i18n/en.yml
+++ b/_i18n/en.yml
@@ -36,6 +36,8 @@ pages:
       thanks: Thank you! Your submission has been received!
       placeholder: Email address
       oops: Oops! Something went wrong while submitting the form
+    privacy:
+      link: Privacy policy and terms of use
   news:
     archive_link: Archive
   jobs:
