--- a/_i18n/fr.yml
+++ b/_i18n/fr.yml
@@ -22,7 +22,7 @@ pages:
       autres: Plus de news
     about:
       title: A propos
-      texte: Du 10 au 22 janvier 2020, Lausanne accueillera la 3e édition des Jeux Olympiques de la Jeunesse d’hiver. Vingt-huit ans après l’obtention de son titre de Capitale Olympique, Lausanne devient Ville Olympique en accueillant le second plus grand événement multisport hivernal après les Jeux Olympiques d’hiver et offre à de jeunes athlètes une expérience olympique inoubliable. La culture, les performances et l’éducation se rencontrent pour former un réel festival du sport!
+      texte: Du 10 au 22 janvier 2020, Lausanne accueillera la 3e édition des Jeux Olympiques de la Jeunesse d’hiver. Vingt-six ans après l’obtention de son titre de Capitale Olympique, Lausanne devient Ville Olympique en accueillant le second plus grand événement multisport hivernal après les Jeux Olympiques d’hiver et offre à de jeunes athlètes une expérience olympique inoubliable. La culture, les performances et l’éducation se rencontrent pour former un réel festival du sport!
       more: En savoir plus
     shop:
       title: Tous les produits Lausanne 2020 bientôt disponibles!
